Basic support for new logging in firecracker
