# client/swagger.yaml
@@ -240,6 +240,29 @@ paths:
           schema:
             $ref: "#/definitions/Error"
 
+  /metrics:
+    put:
+      summary: Initializes the metrics system by specifying a named pipe or a file for the metrics output.
+      operationId: putMetrics
+      parameters:
+        - name: body
+          in: body
+          description: Metrics system description
+          required: true
+          schema:
+            $ref: "#/definitions/Metrics"
+      responses:
+        204:
+          description: Metrics system created.
+        400:
+          description: Metrics system cannot be initialized due to bad input.
+          schema:
+            $ref: "#/definitions/Error"
+        default:
+          description: Internal server error.
+          schema:
+            $ref: "#/definitions/Error"
+
   /mmds:
     put:
       summary: Creates a MMDS (Microvm Metadata Service) data store.
@@ -486,20 +509,16 @@ definitions:
     description:
       Describes the configuration option for the logging capability.
     required:
-      - log_fifo
-      - metrics_fifo
+      - log_path
     properties:
-      log_fifo:
-        type: string
-        description: The named pipe for the human readable log output.
-      metrics_fifo:
-        type: string
-        description: The named pipe where the JSON-formatted metrics will be flushed.
       level:
         type: string
         description: Set the level.
         enum: [Error, Warning, Info, Debug]
         default: Warning
+      log_path:
+        type: string
+        description: Path to the named pipe or file for the human readable log output.
       show_level:
         type: boolean
         description: Whether or not to output the level in the logs.
@@ -533,6 +552,28 @@ definitions:
       cpu_template:
         $ref: "#/definitions/CpuTemplate"
 
+  Metrics:
+    type: object
+    description:
+      Describes the configuration option for the metrics capability.
+    required:
+      - metrics_path
+    properties:
+      metrics_path:
+        type: string
+        description: Path to the named pipe or file where the JSON-formatted metrics are flushed.
+
+  MmdsConfig:
+    type: object
+    description:
+      Defines the MMDS configuration.
+    properties:
+      ipv4_address:
+        type: string
+        format: "169.254.([1-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-4]).([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])"
+        default: "169.254.169.254"
+        description: A valid IPv4 link-local address.
+        
   NetworkInterface:
     type: object
     description:
